# TP-2018-2C-Los-5digos

./: .cproject  .gitignore  .project  CPUcompile.sh  DMAcompile.sh  FM9compile.sh  MDJcompile.sh  README.md  SAFAcompile.sh  compile.sh  compileProyect.sh
CPU/: .cproject  .project  config.cfg
CPU/Debug/: CPU  makefile  objects.mk
CPU/src/: CPU.c  CPU.h
CosasVarias/: propio.escriptorio  propio2.escriptorio  propio3.escriptorio
DAM/: .cproject  .project  DAM.c  DAM.h
DAM/Debug/: DAM  makefile  subdir.mk
DMA/: config.cfg
DMA/Debug/: DMA  makefile  objects.mk
DMA/src/: DMA.c  DMA.h  funcionesDMA.c  funcionesDMA.h
FunesMemory9/: config.cfg
GranTP-Commons/: .cproject  .project  configuracion.c  configuracion.h  javaStrings.c  mutex_list.c  mutex_log.c  socket.h  structCommons.c  structCommons.h
GranTPCommons/: cloneRepo.sh  comandos.c  compression.c  compression.h  configuracion.h  cpu.sh  dam.sh  funesmemory9.sh  mdj.sh  safa.sh  socket.c  socket.h
MDJ_FileSystem/: .cproject  .project  FileSystem.c  FileSystem.h  config.cfg  funcionesConsola.c  funcionesConsola.h  funcionesDAM.c
S-AFA/: .cproject  .project  SAFA.c  SAFA.h  handlerConexiones.c  handlerConexiones.h
SAFA/: .cproject  .project  config  config.cfg  logo.txt
tp-commons/: .cproject  .project  CMakeLists.txt  Makefile  comandos.c  comandos.h  compression.c  compression.h  configuracion.c  configuracion.h  fileFunctions.c  fileFunctions.h  javaStrings.c  javaStrings.h  mutex_list.c  mutex_list.h  mutex_log.c  mutex_log.h  socket.c  socket.h  structCommons.c  structCommons.h
(+67 files in other folders)
